<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minhb.noteforlife.AddActivity">

    <EditText
        android:id="@+id/noteTitle"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:gravity="start"
        android:hint="@string/titleNote"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/dayText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/dayCaps"
            android:textSize="20sp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:visibility="visible"
            android:dropDownWidth="100dp"/>

        <TextView
            android:id="@+id/slash1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/slash"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/monthText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/monthCaps"
            android:textSize="20sp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:visibility="visible"
            android:dropDownWidth="100dp"/>

        <TextView
            android:id="@+id/slash2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/slash"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/yearText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/yearCaps"
            android:textSize="20sp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:visibility="visible"
            android:dropDownWidth="100dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hourText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/hourCaps"
            android:textSize="20sp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:dropDownWidth="100dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/twoDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twoDot"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/minuteText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/minuteCaps"
            android:textSize="20sp"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:dropDownWidth="100dp"
            android:visibility="visible" />

    </LinearLayout>

    <EditText
        android:id="@+id/noteArea"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:gravity="start"
        android:hint="@string/noteArea"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
